fixed game rules page alignment

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -24,17 +24,14 @@ header h1 {
   color: transparent;
   animation: moveBg 10s linear infinite;
   -webkit-animation: moveBg 10s cir infinite;
-  background-image: linear-gradient(
-      295deg,
+  background-image: linear-gradient(295deg,
       rgba(231, 231, 231, 0.08) 0%,
       rgba(231, 231, 231, 0.08) 14%,
       rgba(224, 224, 224, 0.08) 14%,
       rgba(224, 224, 224, 0.08) 51%,
       rgba(140, 140, 140, 0.08) 51%,
-      rgba(140, 140, 140, 0.08) 100%
-    ),
-    linear-gradient(
-      295deg,
+      rgba(140, 140, 140, 0.08) 100%),
+    linear-gradient(295deg,
       rgba(244, 244, 244, 0.09) 0%,
       rgba(244, 244, 244, 0.09) 21%,
       rgba(158, 158, 158, 0.09) 21%,
@@ -42,8 +39,7 @@ header h1 {
       rgba(162, 162, 162, 0.09) 31%,
       rgba(162, 162, 162, 0.09) 89%,
       rgba(115, 115, 115, 0.09) 89%,
-      rgba(115, 115, 115, 0.09) 100%
-    ),
+      rgba(115, 115, 115, 0.09) 100%),
     linear-gradient(295deg, rgb(59, 53, 68), rgba(22, 0, 75, 0.973));
 }
 
